# nightmarket

./: .gitignore  Cargo.toml  README.md  build.sh  build_single.sh  rust-toolchain.toml
circuits/: .gitignore  README.md  build.sh  compile_circuits.sh  extract_vk_hashes.js  location_proof.circom  location_proof_simple.circom  mixer_withdrawal.circom  package.json  reputation_threshold.circom  setup_circuits.sh  test_circuits.js
contracts/nightmarket-escrow/: Cargo.toml
contracts/nightmarket-escrow/src/: main.rs
contracts/nightmarket-listings/: Cargo.toml
contracts/nightmarket-listings/src/: main.rs
contracts/nightmarket-mixer/: Cargo.toml
contracts/nightmarket-mixer/src/: main.rs
contracts/nightmarket-reputation/: Cargo.toml
contracts/nightmarket-reputation/src/: main.rs
contracts/nightmarket-zones/: Cargo.toml
contracts/nightmarket-zones/src/: main.rs
deploy/: .env.example  deploy_all.ts  deploy_zones.ts  package.json  verify_all_selectors.cjs  verify_selectors.js
nightmarket-ui/: .env.example  .env.local.example  README.md  deploy.sh  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vercel.json
nightmarket-ui/app/: globals.css  layout.tsx  page.tsx  providers.tsx  rainbowkit-overrides.css
nightmarket-ui/app/market/: page.tsx
nightmarket-ui/components/: CreateListing.tsx  CustomConnectButton.tsx  ListingCard.tsx  ListingsBrowser.tsx  LocationProof.tsx  NightStatus.tsx
nightmarket-ui/hooks/: useListings.tsx  useNightmarket.tsx
nightmarket-ui/lib/: chains.ts  contracts.ts  encryption.ts  geolocation.ts  globalZoneGrid.ts  wagmi.ts  zkProofs.ts  zoneDetection.ts
nightmarket-ui/public/circuits/: location_proof.wasm  location_proof.zkey  mixer_withdrawal.wasm  mixer_withdrawal.zkey  reputation_threshold.wasm  reputation_threshold.zkey
nightmarket-ui/types/: snarkjs.d.ts
shared/: Cargo.toml
shared/src/: bounds.rs  crypto.rs  lib.rs  panic_handler.rs  storage.rs
