[package]
name = "nightmarket-mixer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nightmarket_mixer"
path = "src/main.rs"

[dependencies]
polkavm-derive = { workspace = true }
simplealloc = { workspace = true }
ethabi = { workspace = true }
uapi = { workspace = true }
nightmarket-shared = { path = "../../shared" }
