[package]
name = "nightmarket-zones"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nightmarket_zones"
path = "src/main.rs"

[dependencies]
polkavm-derive = { workspace = true }
simplealloc = { workspace = true }
ethabi = { workspace = true }
uapi = { workspace = true }
nightmarket-shared = { path = "../../shared" }
